--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTE4Njk4NDg5MjIwMzAxMjA5Ng.GcFRP5.EHNbWGcxeSLn0ihOno8U52AXSvZwUV41Vryqjg
+TOKEN=MTE4Njk4NDg5MjIwMzAxMjA5Ng.G37t8L.e7mP7HURI7MquKqFp4gHA_4ytZ_3gttNHoAwJ4
 GUILD_ID=1003624187971252224
 CLIENT_ID=1186984892203012096
